--- a/source/TestDeviceView.lfm
+++ b/source/TestDeviceView.lfm
@@ -44,4 +44,23 @@ object formTestDevView: TformTestDevView
     OnClick = btInputWriteClick
     TabOrder = 3
   end
+  object btThreadStart: TButton
+    Left = 208
+    Height = 25
+    Top = 16
+    Width = 120
+    Caption = 'Thread Start'
+    OnClick = btThreadStartClick
+    TabOrder = 4
+  end
+  object btThreadStop: TButton
+    Left = 208
+    Height = 25
+    Top = 44
+    Width = 120
+    Caption = 'Thread Stop'
+    Enabled = False
+    OnClick = btThreadStopClick
+    TabOrder = 5
+  end
 end
