--- a/source/DeviceView.lfm
+++ b/source/DeviceView.lfm
@@ -312,6 +312,7 @@ object frmDeviceView: TfrmDeviceView
         RowCount = 1
         TabOrder = 0
         TitleStyle = tsNative
+        OnSelectCell = sgHoldingsSelectCell
         ColWidths = (
           61
           119
@@ -609,6 +610,7 @@ object frmDeviceView: TfrmDeviceView
         RowCount = 1
         TabOrder = 0
         TitleStyle = tsNative
+        OnSelectCell = sgInputsSelectCell
         ColWidths = (
           61
           119
