--- a/source/formChennelRSWindowsAdd.lfm
+++ b/source/formChennelRSWindowsAdd.lfm
@@ -1,18 +1,18 @@
 object frmChennelRSAddWin: TfrmChennelRSAddWin
-  Left = 2455
-  Height = 247
-  Top = 392
+  Left = 2742
+  Height = 353
+  Top = 331
   Width = 393
   BorderStyle = bsDialog
   Caption = 'Добавить последовательный канал'
-  ClientHeight = 247
+  ClientHeight = 353
   ClientWidth = 393
   Position = poOwnerFormCenter
   LCLVersion = '1.5'
   object btOk: TButton
     Left = 219
     Height = 25
-    Top = 210
+    Top = 316
     Width = 80
     Anchors = [akRight, akBottom]
     Caption = 'Добавить'
@@ -23,7 +23,7 @@ object frmChennelRSAddWin: TfrmChennelRSAddWin
   object btCancel: TButton
     Left = 307
     Height = 25
-    Top = 210
+    Top = 316
     Width = 75
     Anchors = [akRight, akBottom]
     Caption = 'Отмена'
@@ -197,5 +197,59 @@ object frmChennelRSAddWin: TfrmChennelRSAddWin
     Width = 52
     Caption = '\\.\COM'
     ParentColor = False
+  end
+  object lbPackRupt: TLabel
+    Left = 8
+    Height = 20
+    Top = 200
+    Width = 102
+    Caption = 'IntervalTimeout'
+    FocusControl = spIntervalTimeout
+    ParentColor = False
+  end
+  object lbTotalMulti: TLabel
+    Left = 8
+    Height = 20
+    Top = 236
+    Width = 147
+    Caption = 'TotalTimeoutMultiplier'
+    FocusControl = spTotalMulti
+    ParentColor = False
+  end
+  object lbTotalConst: TLabel
+    Left = 8
+    Height = 20
+    Top = 272
+    Width = 146
+    Caption = 'TotalTimeoutConstant'
+    FocusControl = spTotalConst
+    ParentColor = False
+  end
+  object spIntervalTimeout: TSpinEdit
+    Left = 168
+    Height = 32
+    Top = 200
+    Width = 130
+    MaxValue = 65535
+    TabOrder = 8
+    Value = 200
+  end
+  object spTotalMulti: TSpinEdit
+    Left = 168
+    Height = 32
+    Top = 236
+    Width = 130
+    MaxValue = 65535
+    TabOrder = 9
+    Value = 10
+  end
+  object spTotalConst: TSpinEdit
+    Left = 168
+    Height = 32
+    Top = 272
+    Width = 130
+    MaxValue = 65535
+    TabOrder = 10
+    Value = 10
   end
 end
