--- a/source/DeviceView.lfm
+++ b/source/DeviceView.lfm
@@ -32,8 +32,8 @@ object frmDeviceView: TfrmDeviceView
     Height = 705
     Top = 40
     Width = 664
-    ActivePage = tsInputs
-    TabIndex = 3
+    ActivePage = tsHoldings
+    TabIndex = 2
     TabOrder = 0
     object tsCoils: TTabSheet
       Caption = 'Coils'
